[tool.poetry]
name = "mair-policies-comparision"
version = "0.1.0"
description = ""
authors = ["arturzolkowski <artur.zolkowski@wp.pl>"]
packages = [
    { include = "mair-policies-comparision", from="."},
    { include = "mair-policies-comparision/**/*.py", from="."},
]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.1"
spacy = "^3.3.1"
black = "^22.6.0"
scipy = "^1.8.1"
gensim = "^4.2.0"
swifter = "^1.2.0"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.3.0/en_core_web_lg-3.3.0-py3-none-any.whl"}
PyPDF2 = "^2.6.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pyLDAvis = "^3.3.1"
hdbscan = "^0.8.28"
pycountry = "^22.3.5"
statsmodels = "^0.13.2"
openai = "^0.23.0"

[tool.poetry.dev-dependencies]
streamlit = "^1.11.1"
plotly = "^5.9.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
