[tool.poetry]
name = "mair-policies-comparison"
version = "0.1.0"
description = ""
authors = ["arturzolkowski <artur.zolkowski@wp.pl>"]
packages = [
    { include = "src", from="."},
    { include = "src/**/*.py", from="."},
]

[tool.poetry.dependencies]
python = "^3.9,<3.9.7||>3.9.7,<3.10"
pandas = "^1.4.3"
numpy = "^1.23.1"
spacy = "^3.3.1"
black = "^22.6.0"
scipy = "^1.8.1"
gensim = "^4.2.0"
swifter = "^1.2.0"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.3.0/en_core_web_lg-3.3.0-py3-none-any.whl"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0-py3-none-any.whl"}
PyPDF2 = "^2.6.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pyLDAvis = "^3.3.1"
hdbscan = "^0.8.28"
pycountry = "^22.3.5"
statsmodels = "^0.13.2"
openai = "^0.23.0"
umap-learn = "^0.5.3"
llvmlite = "0.39.1"
streamlit = "1.16.0"

[tool.poetry.dev-dependencies]
plotly = "^5.9.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
