[tool.poetry]
name = "hades-nlp"
version = "0.1.1"
description = "Homologous Automated Document Exploration and Summarization - A powerful tool for comparing similarly structured documents"
authors = ["Artur Żółkowski <artur.zolkowski@wp.pl>", "Piotr Wilczyński <piotrwil288@gmail.com>", "Mateusz Krzyziński <krzyzinskimateusz23@gmail.com>", "Emilia Wiśnios <wisniosemilia@gmail.com>"]
packages = [
    { include = "hades"},
    { include = "hades_app"},
]
keywords = ["nlp", "documents", "topic modeling", "summarization", "machine learning", "natural language processing", "text analysis", "text mining", "text summarization"]
readme = "README.md"

[tool.poetry.scripts]
hades = "hades_app.run_app:cli"

[tool.poetry.dependencies]
python = "^3.9,<3.9.7||>3.9.7,<3.10"
pandas = "^1.4.3"
numpy = "^1.23.1"
spacy = "^3.3.1"
black = "^22.6.0"
scipy = "^1.8.1"
gensim = "^4.2.0"
swifter = "^1.2.0"
PyPDF2 = "^2.6.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pyLDAvis = "^3.3.1"
hdbscan = "^0.8.28"
pycountry = "^22.3.5"
statsmodels = "^0.13.2"
openai = "^0.23.0"
umap-learn = "^0.5.3"
llvmlite = "0.39.1"
streamlit = "1.16.0"
contextualized-topic-models = "^2.4.2"
st-annotated-text = "^3.0.0"
click = "^8.1.3"
bert-extractive-summarizer = "^0.10.1"
plotly = "^5.9.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
